--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.crt
+*.crt
 *.key
-.terraform
-eks_clusters/cluster1/.terraform
-eks_clusters/cluster1/*terraform*
-eks_ckusters/cluster2/.terraform
-eks_clusters/cluster2/*terraform*
+tempfile.json
+terraform-aws-eks-blueprints/
+eks_clusters/.DS_Store
+.idea
 
