--- a/integration/director/Dockerfile
+++ b/integration/director/Dockerfile
@@ -5,7 +5,7 @@ FROM public.ecr.aws/docker/library/golang:1.20.3-alpine3.17 as go
 RUN apk add git
 WORKDIR /app
 ENV GO111MODULE=on
-ENV GOPROXY=direct
+ENV GOPROXY=direct,https://proxy.golang.org
 
 COPY go.mod .
 COPY go.sum .
@@ -17,8 +17,6 @@ FROM public.ecr.aws/docker/library/alpine:3.17
 
 WORKDIR /app
 COPY --from=go /app/director /app/director
-# COPY *.cert .
-# COPY *.key .
 USER 999
 HEALTHCHECK CMD ["true"]
 
