--- a/manifests/fleets/ncat/ncat-fleet4.yaml
+++ b/manifests/fleets/ncat/ncat-fleet4.yaml
@@ -16,8 +16,6 @@ spec:
         region: ${AWS_REGION}
     spec:
       players:
-        # set this GameServer's initial player capacity to 10
-        # initialCapacity: 10
       ports:
       - name: default
         protocol: TCP
@@ -27,6 +25,13 @@ spec:
        periodSeconds: 60
       template:
         spec:
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                - matchExpressions:
+                  - key: agones.dev/agones-gameserver
+                    operator: Exists
           containers:
           - name: ncat
             args:
