Remove hardcoded values

--- a/manifests/multicluster-allocation-1-to-2.yaml
+++ b/manifests/multicluster-allocation-1-to-2.yaml
@@ -2,7 +2,7 @@
 ## Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 ## SPDX-License-Identifier: MIT-0
 
-# Configures remote multi-cluster allocation from agones-gameservers-1 to agones-gameservers-2
+# Configures remote multi-cluster allocation from cluster-1 to cluster-2
 apiVersion: multicluster.agones.dev/v1
 kind: GameServerAllocationPolicy
 metadata:
@@ -12,7 +12,7 @@ spec:
   connectionInfo:
     allocationEndpoints:
     - ${ALLOCATOR_IP_CLUSTER2}
-    clusterName: "agones-gameservers-2"
+    clusterName: "cluster-2"
     namespace: gameservers
     secretName: allocator-secret-to-cluster-2 
   priority: 1
