--- a/manifests/fleets/ncat/ncat-fleet2.yaml
+++ b/manifests/fleets/ncat/ncat-fleet2.yaml
@@ -13,7 +13,7 @@ spec:
     metadata:
       labels:
         pool: TWO
-        region: ${AWS_REGION}
+        region: ${REGION}
     spec:
       players:
       ports:
