Sync changes from GitLab

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 *.cert
 *.key
 tempfile.json
-terraform-aws-eks-blueprints/
-eks_clusters/.DS_Store
-.idea
 .DS_Store
+.idea
 .terraform*
+terraform.tfstate*
 go.work*
