Updating CodeBuild role to be assumed by an account user, for demo purposes only

--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -396,15 +396,16 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              Service:
-                - codebuild.amazonaws.com
-            Action:
-              - sts:AssumeRole
+              Service: codebuild.amazonaws.com
+            Action: sts:AssumeRole
           - Effect: Allow
             Principal:
               AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
-            Action:
-              - sts:AssumeRole
+            Action: sts:AssumeRole
+          - Effect: Allow
+            Principal:
+              AWS: !Ref AWS::AccountId
+            Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess
         - arn:aws:iam::aws:policy/AmazonS3FullAccess
@@ -459,6 +460,7 @@ Resources:
                   - eks:ListNodegroups
                   - eks:ListUpdates
                   - eks:DescribeUpdate
+                  - eks:AccessKubernetesApi
                 Resource: "*"
               - Effect: Allow
                 Action:
